remove PermSize argument and update Travis configuration to JDK8